noinst_LIBRARIES = libfiretalk.a
EXTRA_DIST = aim.c irc.c toc.c firetalk.c safestring.c oscar.c aim.h toc.h firetalk-int.h firetalk.h safestring.h oscar.h toc2_uuids.h
AUTOMAKE_OPTIONS = foreign
libfiretalk_a_SOURCES =  aim.c irc.c toc.c firetalk.c safestring.c oscar.c

SUBDIRS = 
AM_CPPFLAGS = -I$(top_srcdir)/../connwrap -I$(top_srcdir)/../connwrap
