AM_CPPFLAGS = -I$(top_srcdir)/kkconsui/include -I$(top_srcdir)/kkstrtext
noinst_LIBRARIES = libkkconsui.a
SUBDIRS = include src
libkkconsui_a_SOURCES = 
libkkconsui_a_LIBADD =  src/treeview.o src/colorschemer.o src/textinputline.o src/fileselector.o src/textwindow.o src/texteditor.o src/dialogbox.o src/screenarea.o src/textbrowser.o src/abstractui.o src/horizontalbar.o src/linkedlist.o src/cmenus.o src/conscommon.o
AUTOMAKE_OPTIONS = foreign
