EXTRA_DIST = ChangeLog AUTHORS COPYING INSTALL NEWS README
SUBDIRS = msn
AM_CPPFLAGS = -I$(top_srcdir)/connwrap
noinst_LIBRARIES = liblibmsn.a
liblibmsn_a_SOURCES =
liblibmsn_a_LIBADD = msn/authdata.o msn/buddy.o msn/connection.o msn/filetransfer.o msn/invitation.o msn/message.o msn/notificationserver.o msn/passport.o msn/switchboardserver.o msn/util.o
