noinst_LIBRARIES = liblibyahoo2.a
EXTRA_DIST = crypt.c libyahoo2.c sha.c yahoo_list.c yahoo_httplib.c yahoo_util.c yahoo_auth.c sha.h yahoo2_callbacks.h yahoo_debug.h yahoo_httplib.h yahoo2_types.h yahoo_list.h yahoo_util.h yahoo2.h yahoo_auth.h
AUTOMAKE_OPTIONS = foreign
liblibyahoo2_a_SOURCES =  crypt.c libyahoo2.c sha.c yahoo_list.c yahoo_httplib.c yahoo_util.c yahoo_auth.c


SUBDIRS = 
INCLUDES = -I$(top_srcdir)/../connwrap -I$(top_srcdir)/../connwrap-0.1
CPPFLAGS = -DSTDC_HEADERS -DUSE_STRUCT_CALLBACKS
