AC_INIT(aclocal.m4)
AM_INIT_AUTOMAKE(libyahoo2, 0.1)

AC_PROG_RANLIB
AC_PROG_CC

AC_ARG_ENABLE(yahoo, [  --disable-yahoo   Build without Yahoo!], build_yahoo="$enableval", build_yahoo="yes")
AM_CONDITIONAL(BUILD_YAHOO, test "x$build_yahoo" = xyes)

if test "$build_yahoo" = "yes"; then
    AC_PROG_CXX
    AC_CHECK_HEADERS(inttypes.h stdint.h)

    AC_MSG_CHECKING(endianness)
    AC_TRY_COMPILE([
	#include <sys/types.h>
	#include <sys/param.h>
    ], [
	#if defined(BYTE_ORDER) && defined(BIG_ENDIAN)
	    #if BYTE_ORDER == BIG_ENDIAN
		bogus
	    #endif
	#else
	    #if defined(_BIG_ENDIAN)
		bogus
	    #endif
	#endif
    ],[
	ac_end=little
    ],[
	AC_DEFINE(WORDS_BIGENDIAN, [big endian architecture])
	ac_end=big
    ])
    AC_MSG_RESULT($ac_end)
fi

AC_OUTPUT(Makefile)
