AM_CXXFLAGS = -Wno-write-strings

AM_CPPFLAGS = -I$(top_srcdir)/kkconsui/include -I$(top_srcdir)/kkstrtext
noinst_LIBRARIES = libsrc.a
libsrc_a_SOURCES =  treeview.cc colorschemer.cc textinputline.cc fileselector.cc textwindow.cc texteditor.cc dialogbox.cc screenarea.cc textbrowser.cc abstractui.cc horizontalbar.cc linkedlist.cc cmenus.cc conscommon.cc
