INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I/home/konst/devel/firetalk -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/libicq2000 -I/home/konst/devel/libjabber -I/home/konst/devel/libyahoo2 -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/connwrap -I/home/konst/devel/libgadu -I/home/konst/devel/libicq2000/libicq2000 -I/home/konst/devel/libmsn -I$(top_srcdir)/intl
noinst_LIBRARIES = libhooks.a
libhooks_a_SOURCES = yahoohook.cc jabberhook.cc aimhook.cc icqhook.cc irchook.cc abstracthook.cc rsshook.cc HTTPClient.cc ljhook.cc gaduhook.cc msnhook.cc
EXTRA_DIST = yahoohook.cc jabberhook.cc aimhook.cc icqhook.cc irchook.cc abstracthook.cc rsshook.cc HTTPClient.cc ljhook.cc gaduhook.cc msnhook.cc yahoohook.h aimhook.h jabberhook.h icqhook.h irchook.h abstracthook.h rsshook.h HTTPClient.h ljhook.h gaduhook.h msnhook.h
