INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/hooks -I$(top_srcdir)/connwrap-0.1 -I$(top_srcdir)/firetalk-0.1 -I$(top_srcdir)/firetalk-0.1/../connwrap -I$(top_srcdir)/firetalk-0.1/../connwrap-0.1 -I$(top_srcdir)/kkconsui-0.1 -I$(top_srcdir)/kkconsui-0.1/include -I$(top_srcdir)/kkconsui-0.1/../kkstrtext -I$(top_srcdir)/kkconsui-0.1/../kkstrtext-0.1 -I$(top_srcdir)/kkstrtext-0.1 -I$(top_srcdir)/kksystr-0.1 -I$(top_srcdir)/kksystr-0.1/include -I$(top_srcdir)/kksystr-0.1/../kkstrtext -I$(top_srcdir)/kksystr-0.1/../kkstrtext-0.1 -I$(top_srcdir)/libgadu-0.1 -I$(top_srcdir)/libicq2000-0.1 -I$(top_srcdir)/libicq2000-0.1/libicq2000 -I$(top_srcdir)/libjabber-0.1 -I$(top_srcdir)/libjabber-0.1/../connwrap -I$(top_srcdir)/libjabber-0.1/../connwrap-0.1 -I$(top_srcdir)/libmsn-0.1 -I$(top_srcdir)/libmsn-0.1/../connwrap -I$(top_srcdir)/libmsn-0.1/../connwrap-0.1 -I$(top_srcdir)/libyahoo2-0.1 -I$(top_srcdir)/libyahoo2-0.1/../connwrap -I$(top_srcdir)/libyahoo2-0.1/../connwrap-0.1
noinst_LIBRARIES = libhooks.a
libhooks_a_SOURCES = rsshook.cc HTTPClient.cc yahoohook.cc jabberhook.cc aimhook.cc icqhook.cc gaduhook.cc irchook.cc ljhook.cc msnhook.cc abstracthook.cc
EXTRA_DIST = rsshook.cc HTTPClient.cc yahoohook.cc jabberhook.cc aimhook.cc icqhook.cc gaduhook.cc irchook.cc ljhook.cc msnhook.cc abstracthook.cc ljhook.h rsshook.h HTTPClient.h yahoohook.h aimhook.h msnhook.h jabberhook.h gaduhook.h icqhook.h irchook.h abstracthook.h
