INCLUDES = -I$(top_srcdir)/src/icq -I$(top_srcdir)/src/yahoo -I$(top_srcdir)/src/infocard -I$(top_srcdir)/src -I/home/konst/devel/icqlib -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/libyahoo -I$(top_srcdir)/intl
noinst_LIBRARIES = libicq.a
libicq_a_SOURCES = icqhook.cc
EXTRA_DIST = icqhook.cc icqhook.h
