INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/icq -I$(top_srcdir)/src/yahoo -I/home/konst/devel/icqlib -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/kktoolbox/kkconsui -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/kktoolbox/kkconsui/../kkstrtext -I/home/konst/devel/kktoolbox/kkconsui/../kkstrtext-0.1 -I/home/konst/devel/kktoolbox/kksystr -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/kktoolbox/kksystr/../kkstrtext -I/home/konst/devel/kktoolbox/kksystr/../kkstrtext-0.1 -I/home/konst/devel/libyahoo -I$(top_srcdir)/intl
noinst_LIBRARIES = libyahoo.a
libyahoo_a_SOURCES = yahoohook.cc
EXTRA_DIST = yahoohook.cc yahoohook.h
