INCLUDES = -I$(top_srcdir)/src/icq -I$(top_srcdir)/src/yahoo -I$(top_srcdir)/src -I/home/konst/devel/icqlib -I/home/konst/devel/kktoolbox/kkstrtext -I/home/konst/devel/kktoolbox/kksystr/include -I/home/konst/devel/kktoolbox/kkconsui/include -I/home/konst/devel/libyahoo -I$(top_srcdir)/intl
noinst_LIBRARIES = libyahoo.a
libyahoo_a_SOURCES = yahoohook.cc
EXTRA_DIST = yahoohook.cc yahoohook.h
